Avoid crashing when closing a document that is being parsed

BUG: 404164